changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add logic to do svn version check between plugin and server - this prevents
incompatible plugins from being used.
MSW 2011-11-26

New server argument: -disable-plugin.
Disables a plugin from its name, 'All' to disable all.
Nicolas Weeger 2011-11-20

New server setting: "special_break_map".
Controls whether submaps in random maps can break the walls to be placed.
On (can break) by default for historical reasons.
Nicolas Weeger 2011-11-20

Rewrite the i18n system. This makes it easier to use strings in the code,
instead of arbitrary identifiers.
Nicolas Weeger 2011-11-12

Improve artifact support.
Add an 'artifact' field to 'object', that is saved and loaded, to keep trace
of what (optional) artifact an item was created with.
This enables artifact modifications on existing items.
Nicolas Weeger 2011-11-01

Apply patch #3428070: Autoreconf Warnings, by Steven Johnson.
It is for 'client', but fixes the same bug on server.
Nicolas Weeger 2011-10-27

Fix bug #2005689: 2.0 Creator creates items with duplicate names.
Have creator objects clear the title instead of setting both it and the name.
Nicolas Weeger 2011-10-22

Fix invalid expression.
Nicolas Weeger 2011-10-21

Add sys/socket.h to includes, since newserver.h needs it on some systems, and
every file includes that.  Remove it from files which previously included it,
since includes.h takes care of that now.
MSW 2011-10-08

Fix face issue with artifacts, eg gems.
Nicolas Weeger 2011-09-24

Fix account-related potential crashes.
Nicolas Weeger 2011-09-12

Remove curl/types.h include, which is obsolete.
Nicolas Weeger 2011-09-10
